--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@nuxtjs/google-fonts": "^3.1.3",
     "vue-recaptcha": "^3.0.0-alpha.6"
   }
 }
