Latest blogs page / Tailwind migration feature release

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-NUXT_PUBLIC_MESH_API_URL=
-NEXT_PUBLIC_GOOGLE_RECAPTCHA_KEY=
+PORTFOLIO_API_URL=
+HYPER_API_URL=
+BLOG_URL=
+
+GOOGLE_RECAPTCHA_KEY=
