--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.8.2",
     "nuxt-primevue": "^0.2.2",
     "vue": "^3.3.10",
@@ -24,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "dayjs": "^1.11.13",
     "vue-recaptcha": "^3.0.0-alpha.6"
   }
 }
